[tool.poetry]
name = "pinta-api"
version = "0.0.1"
description = "Job management on GPU clusters"
authors = ["Pinta Team <pinta-l@usc.edu>"]
packages = [{ include = "pinta"}]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://qed.usc.edu/pinta"
repository = "https://github.com/qed-usc/pinta"
keywords = ["hpc", "gpu", "cluster", "scheduling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.17"
python-jose = "^3.1.0"
passlib = "^1.7.2"
kubernetes = "^11.0.0"
tenacity = "^6.2.0"
psycopg2 = "^2.8.5"
bcrypt = "^3.1.7"
emails = "^0.5.15"
python-multipart = "^0.0.5"
websockets = "^8.1"
pydantic = {version = "^1.5.1", extras = ["email"]}
fastapi = "^0.56.0"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pudb = "^2019.2"
pylint = "^2.5.3"
pep8 = "^1.7.1"

[tool.poetry.scripts]
pinta-api = 'pinta.api.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
